deploy/metrics-server/metrics-dep.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: podinfo
  namespace: dev
  annotations:
    flux.weave.works/tag.podinfod: semver:>3.0.0
spec:
  replicas: 3
  selector:
    matchLabels:
      app: podinfo
  template:
    metadata:
      labels:
        app: podinfo
      annotations:
        prometheus.io/scrape: 'true'
    spec:
      containers:
      - name: podinfod
        image: quay.io/brice/metrics-demo
        command:
        - ./podinfo
        - --port=4000
        ports:
        - containerPort: 3000
